[options]
include_package_data = true
python_requires = >=2.7

[options.data_files]
bin = pyval

[metadata]
name             = eval
version          = attr: val.__version__
url              = https://github.com/coldfix/pyval
description      = Show value of an importable object
author           = Thomas Gläßle
author_email     = thomas@coldfix.de
long_description = file: README.rst
license          = GPLv3+
classifiers      =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Topic :: Software Development
    Topic :: Utilities
long_description_content_type = text/x-rst
